# rust-sqs-producer

./: Cargo.toml
src/: main.rs
