[package]
name = "rust-sqs-golang-dynamodb"
version = "0.1.0"
authors = ["Trevor Roberts Jr <Trevor@DevWidgets.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sqs = { package = "aws-sdk-sqs", path = "../../sqs" }
sqs = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.12-alpha", package = "aws-sdk-sqs"}
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.2.18"